--- a/app/src/css/main.css
+++ b/app/src/css/main.css
@@ -4,7 +4,11 @@
 }
 
 body {
-	font-family: "Dosis", sans-serif;
+	font-family: "Dosis", sans-serif !important;
+	min-height: 100vh;
+	overflow-x: hidden;
+	background-color: #000 !important;
+	color: #ddd !important;
 }
 
 
@@ -16,6 +20,7 @@ body {
 	background-color: #323233;
 	color: #fff;
 	z-index: 999;
+	user-select: none;
 }
 /* .frame-title-bar > .icon {
 	margin: 4px 8px;
